--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,17 @@
 @import './normalize.scss';
+@import './settings.scss';
 
 *, *::before, *::after {
  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: $color-light;
+  font-family: $font-standard;
+  font-size: ($base-size * 1.3);
+  line-height: 1.7;
+  color: $color-dark;
+  letter-spacing: 0.5px;
 }
