--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,1 +1,9 @@
 $base-size: 12px;
+
+$font-standard: 'Roboto', sans-serif;
+
+$color-light: #fafafa;
+$color-background: #4d4d4d;
+$color-dark: #171717;
+$color-decorator: #ff1744;
+
